# Android_APK_Installer

./: Cargo.toml  README.md
src/: main.rs
