[package]
name = "android_apk_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15"
egui = "0.27.1"
image = "0.25.0"

[target.x86_64-pc-windows-gnu]
linker = "/opt/homebrew/bin/x86_64-w64-mingw32-gcc"