[package]
name = "android_apk_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15"
egui = "0.27.1"
image = { version = "0.25.0", default-features = false, features = ["png"] }
egui_extras = "0.27.1"
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
#iced = "0.4"
[dependencies.iced]
version = "0.4"
features = ["image"]
# Check for the latest version

[target.x86_64-pc-windows-gnu]
linker = "/opt/homebrew/bin/x86_64-w64-mingw32-gcc"