[package]
name = "android_apk_installer"
version = "0.1.0"
authors = ["wonjaeyeon <https://github.com/wonjaeyeon>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.1"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25.1", default-features = false, features = [
    "png",
] }
rfd = "0.14.0"
material-icons = "0.2.0"
#tokio = { version = "1.37.0", features = ["full"] }

[target.x86_64-pc-windows-gnu]
linker = "/opt/homebrew/bin/x86_64-w64-mingw32-gcc"